# fibonacci

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  publish.sh
.github/workflows/: CI.yml
__test__/: fibonacci.test.js
src/: lib.rs
